<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.micromata.tpsb</groupId>
	<artifactId>de.micromata.tpsb</artifactId>
	<version>2.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<organization>
		<name>Micromata GmbH</name>
		<url>http://www.micromata.de/</url>
	</organization>
	<inceptionYear>2012</inceptionYear>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- GENOME VERSIONS -->
		<genome.version>2.1.0-SNAPSHOT</genome.version><!-- GENOMEVERSION -->
 		<tpsb.version>${project.version}</tpsb.version>
 		<mgc.version>1.0.0-SNAPSHOT</mgc.version>
		<genome.mvn.plugin.version>${genome.version}</genome.mvn.plugin.version>
		<de.micromata.tpsb.tpsb-common.version>${tpsb.version}</de.micromata.tpsb.tpsb-common.version>
		<de.micromata.tpsb.tpsb-staticdoc.version>${tpsb.version}</de.micromata.tpsb.tpsb-staticdoc.version>
		<de.micromata.tpsb.tpsb-htmlunit.version>${tpsb.version}</de.micromata.tpsb.tpsb-htmlunit.version>
		<de.micromata.tpsb.tpsb-staticdoc.version>${tpsb.version}</de.micromata.tpsb.tpsb-staticdoc.version>
		<de.micromata.tpsb.tpsb-htmlunit.version>${tpsb.version}</de.micromata.tpsb.tpsb-htmlunit.version>
		<de.micromata.tpsb.tpsb-httpmockup.version>${tpsb.version}</de.micromata.tpsb.tpsb-httpmockup.version>

     <log4j.version>1.2.17</log4j.version>
     <junit.version>4.11</junit.version>
		<commons-validator.version>1.5.0</commons-validator.version>
 		<cglib-nodep.version>2.1_3</cglib-nodep.version>
		<!-- JAVAX VERSIONS -->
		<javax.servlet.api.version>3.0.1</javax.servlet.api.version>
		<javax.servlet.jsp.api.version>2.2.1</javax.servlet.jsp.api.version>
		<javax.mail.version>1.4.2</javax.mail.version>
		<javax.servlet.jstl.version>1.1.2</javax.servlet.jstl.version>
		<javax.activation.version>1.1</javax.activation.version>

		<com.sun.xml.ws.jaxws-rt.version>2.2.1</com.sun.xml.ws.jaxws-rt.version>
		<cglib_nodeb.version>2.1_3</cglib_nodeb.version>
		<asm.version>3.2</asm.version>
		<net.sourceforge.collections_generic.version>4.01</net.sourceforge.collections_generic.version>
		<log4j.version>1.2.17</log4j.version>

		<xstream.version>1.4.4</xstream.version>
		<!-- maybe also work 2.3.4.726 -->
		<ibatis-sqlmap.version>2.3.0</ibatis-sqlmap.version>

		<taglibs.standard.version>1.1.2</taglibs.standard.version>
		<spring.version>3.2.13.RELEASE</spring.version>
		<springframework.spring-aop.version>1.2.6</springframework.spring-aop.version>

		<bouncycastle.version>140</bouncycastle.version>
		<xerces.xmlParserAPIs.version>2.6.2</xerces.xmlParserAPIs.version>
		<xerces.xercesImpl.version>2.9.1</xerces.xercesImpl.version>
		<com.uwyn.jhighlight.version>1.0</com.uwyn.jhighlight.version>
		<jmimemagic.version>0.1.2</jmimemagic.version>

		<hsqldb.version>1.8.0.10</hsqldb.version>
		<org.hibernate.hibernate-entitymanager.version>4.1.9.Final</org.hibernate.hibernate-entitymanager.version>
		<hibernate-bundle.version>4.1.9.Final</hibernate-bundle.version>
		<org.hibernate.javax.persistence.hibernate-jpa-2.0-api.version>1.0.1.Final</org.hibernate.javax.persistence.hibernate-jpa-2.0-api.version>
		<org.slf4j.api.version>1.6.4</org.slf4j.api.version>
		<org.slf4j.log4j12.version>1.6.4</org.slf4j.log4j12.version>

		<net.sourceforge.stripes.version>1.4.3</net.sourceforge.stripes.version>

		<!-- ARGLINE -->
		<argLine>-XX:MaxPermSize=768m</argLine>


		<!-- Sonar -->
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.jacoco.reportPath>${project.basedir}/../../target/jacoco.exec</sonar.jacoco.reportPath>
		<sonar.language>java</sonar.language>
		<org.thymeleaf.thymeleaf.version>2.1.4.RELEASE</org.thymeleaf.thymeleaf.version>
	</properties>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			  <modules>
    <module>tpsb-common</module>
    <module>tpsb-staticdoc</module>
    <!--module>tpsb-mvn2-plugin</module-->
    <module>tpsb-httpmockup</module>
    <module>tpsb-soapui</module>
    <module>wickettestbuilder6</module>
    <module>tpsb-htmlunit</module>
  </modules>
		</profile>

		<profile>
			<id>empty</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<modules>
			</modules>
		</profile>

		<!--Code quality. -->
		<profile>
			<id>sonar</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<sonar.jdbc.url>jdbc:oracle:thin:@192.168.76.31/vlsits</sonar.jdbc.url>
				<sonar.jdbc.username>VLS_SONAR</sonar.jdbc.username>
				<sonar.jdbc.password>vls_sonar</sonar.jdbc.password>
				<sonar.host.url>http://vls-its:9000/</sonar.host.url>
				<!-- use next part when locally installed sonar is running -->
				<!--<sonar.jdbc.url>jdbc:h2:tcp://localhost:9092/sonar</sonar.jdbc.url>
					<sonar.jdbc.username>sonar</sonar.jdbc.username> <sonar.jdbc.password>sonar</sonar.jdbc.password>
					<sonar.host.url>http://localhost:9000/</sonar.host.url> -->
				<sonar.exclusions>**/src-gen/**/*.java,**/genome-tools/**/*.java,**/plugins/umgmt/**/*,**/plugins/popstats/**/*,**/GenomeDaoManager.java,**/UmgmtDaoManager.java,**/Emgr.java,**/EmgrFactory.java</sonar.exclusions>
			</properties>
		  <modules>
    <module>tpsb-common</module>
    <!--<module>tpsb-staticdoc</module>
    <module>tpsb-httpmockup</module>
    <module>tpsb-soapui</module>
    <module>wickettestbuilder6</module>
    <module>tpsb-htmlunit</module>-->
  </modules>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>utf-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>

				<executions>
					<execution>
						<inherited>true</inherited>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<attach>true</attach>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.17</version>
					</dependency>
				</dependencies>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<!-- <forkCount>0</forkCount> <reuseForks>false</reuseForks> -->
				</configuration>
			</plugin>
		</plugins>
	</build>


	<issueManagement>
    <!-- TODO -->
		<system>JIRA</system>
		<url>https://team.micromata.de/jira/</url>
	</issueManagement>

	<mailingLists>
		<mailingList>
			<name>Devmailinglist</name>
			<post>genome@micromata.de</post>
		</mailingList>
	</mailingLists>
	<scm>
		<connection>scm:git:ssh://git@git2.micromata.de:7999/genome/genome.git</connection>
		<!-- <developerConnection>scm:svn:https://svn.micromata.de/svn/ulib/genome/tags/trunk</developerConnection> -->
	</scm>
	<!-- -->
	<repositories>
		<repository>
			<id>Apache Nexus</id>
			<url>https://repository.apache.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>genome-deploy</id>
			<name>genome-deploy</name>
			<url>http://repo.micromata.priv:8081/nexus/content/repositories/genome/</url>
		</repository>
		<repository>
			<id>snapshots</id>
			<url>http://repo.micromata.priv:8081/nexus/content/groups/public-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>repo.micromata.priv</id>
			<url>http://repo.micromata.priv:8081/nexus/content/groups/public/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>mavenorg</id>
			<url>http://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>ulib-release</id>
			<name>Ulib releases repository</name>
			<url>http://repo.micromata.priv:8081/nexus/content/repositories/ulib-release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>ulib-snapshot</id>
			<name>Ulib snapshot repository</name>
			<url>http://repo.micromata.priv:8081/nexus/content/repositories/ulib-snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>repo.micromata.priv</id>
			<url>http://repo.micromata.priv:8081/nexus/content/groups/public/</url>
		</pluginRepository>
		<pluginRepository>
			<id>snapshots</id>
			<url>http://repo.micromata.priv:8081/nexus/content/groups/public-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
		<pluginRepository>
			<id>mavenorg</id>
			<url>http://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>



	<distributionManagement>
		<repository>
			<id>genome-releases</id>
			<name>genome-releases</name>
			<url>http://repo.micromata.priv:8081/nexus/content/repositories/genome
      </url>
		</repository>
		<snapshotRepository>
			<id>genome-snapshots</id>
			<name>genome-snapshots</name>
			<url>http://repo.micromata.priv:8081/nexus/content/repositories/genome-snapshot/</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>


</project>
